--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "dependencies": {
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
-    "express-nunjucks": "^2.2.3",
     "mongoose": "^5.3.3",
-    "nunjucks": "^3.1.3"
+    "pug": "^2.0.3"
   }
 }
