--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.0",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "mongoose": "^5.3.3",
     "pug": "^2.0.3"
+  },
+  "devDependencies": {
+    "mocha": "^5.2.0"
   }
 }
